# chemistry_geometry_work

./: .gitignore  CMakeLists.txt  Makefile  README.txt  dat.txt  explanation.org  main.cxx  pyproject.toml
cxx/: dot_cross.cxx  eigen_example.cxx  geometry_classes.cxx  geometry_functions.cxx  hartree_fock_functions.cxx  variant.cxx
data/: molecule_features.csv
lib/: VanillaOption.hpp  geometry_functions.hpp  max1.hpp
lightning_logs/version_0/: events.out.tfevents.1742555467.HOLBMAC2547.93233.0
lightning_logs/version_0/checkpoints/: epoch=4-step=9375.ckpt
src/: .#linear_regression_scratch.py  .#pytorch_classification.py  classification_pytorch.py  gradient_descent.py  helper.py  hyperparameters.py  linear_regression_pytorch.py  linear_regression_pytorch_exercise.py  linear_regression_scratch.py  multivariate.py  optuna_pytorch.py  pytorch_classification.py  save_pytorch_model.py  stat_mech.py  synthetic_data.py  torch_gnn_implementation.py  torch_nn.py  torch_vision.py  utilities.py
src/molecule/: .#mol_features.py  hartree_fock.py  mol_features.py  molecular_feature_store.py
src/simulation/: car.py
test/cxx_tests/: test.cxx
